--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,9 @@ sudo: false
 language: ruby
 rvm:
   - 2.4.0
-before_install: gem install bundler -v 1.14.6
+branches:
+  only:
+    - master
+    - release
+    - develop
 script: bundle exec rspec
