--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,9 @@ sudo: false
 language: ruby
 rvm:
 - 2.4.0
-script: bundle exec rspec
+script: 
+  - bundle exec rspec
+  - bundle exec rubocop
 deploy:
   provider: rubygems
   api_key:
