--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ rvm:
 - 2.4.0
 script: 
   - bundle exec rspec
-  - bundle exec rubocop
+  - bundle exec rubocop lib
+  - bundle exec rubocop spec
 deploy:
   provider: rubygems
   api_key:
