--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ sudo: false
 language: ruby
 rvm:
 - 2.4.0
+env:
+  global:
+    - CI: true
 script: 
   - bundle exec rspec
   - bundle exec rubocop lib
