Move perf tests to its own location
Update rubocop analysis conf

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,9 +1,9 @@
 engines:
   rubocop:
     enabled: true
-  duplication:
-    enabled: true
-ratings:
-  paths:
-  - lib/**
-  - spec/**
+exclude_paths:
+  - "*.gemspec"
+  - Rakefile
+  - Gemfile
+  - docs/**/*
+  - task/**/*
