--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,4 +1,7 @@
 AllCops:
+  Exclude:
+    - bin/**/*
+    - tasks/**/*
   TargetRubyVersion: 2.4
 Metrics/MethodLength:
   Max: 30
@@ -6,14 +9,17 @@ Metrics/MethodLength:
 Metrics/AbcSize:
   Exclude:
     - spec/**/*
+    - perf/**/*
   Max: 20
 Metrics/CyclomaticComplexity:
   Max: 10
 Metrics/BlockLength:
   Exclude: 
     - spec/**/*
+    - perf/**/*
 Metrics/LineLength:
   Exclude:
     - spec/**/*
+    - perf/**/*
 Style/FrozenStringLiteralComment:
   EnforcedStyle: always
