--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -3,7 +3,9 @@ engines:
     enabled: true
 exclude_paths:
   - "*.gemspec"
+  - "*.md"
   - Rakefile
   - Gemfile
   - docs/**/*
   - task/**/*
+  - coverage/**/*
