--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ rvm:
 env:
   global:
   - CI=true
+  - NOKOGIRI_USE_SYSTEM_LIBRARIES=true
 before_script:
 - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
 - chmod +x ./cc-test-reporter
@@ -13,11 +14,14 @@ script:
 - bundle exec rspec
 after_script:
 - "./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT"
+before_deploy:
+- "cp README.md >> docs/index.md"
+- "cd ./docs && bundle install && bundle exec jekyll build"
 deploy:
 - provider: pages
   skip_cleanup: true
   github_token: "$GITHUB_TOKEN"
-  local_dir: "."
+  local_dir: "./docs"
   target_branch: gh-pages
   on:
     branch: feature/update_docs
