--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -16,10 +16,7 @@
 title: DataStructures101
 email: renehr9102@gmail.com
 tagline: Intro to Data Structures on Ruby
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+description: ataStructures101 is a simple gem that groups several implementations of common data structures usually taught in Computer Science courses.
 baseurl: "/data_structures_101" # the subpath of your site, e.g. /blog
 url: "https://renehernandez.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  renehernandez
