--- a/.travis.yml
+++ b/.travis.yml
@@ -9,13 +9,13 @@ env:
 before_script:
 - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
 - chmod +x ./cc-test-reporter
-- "./cc-test-reporter before-build"
+- ./cc-test-reporter before-build
 script:
 - bundle exec rspec
 after_script:
-- "./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT"
+- ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
 before_deploy:
-- "cat ./README.md >> ./docs/index.md"
+- cat ./README.md >> ./docs/index.md
 deploy:
 - provider: pages
   skip_cleanup: true
